--- a/static/stylesheets/theme_us.css
+++ b/static/stylesheets/theme_us.css
@@ -220,10 +220,10 @@
 }
 
 /* 古いiPhone向けの設定 ************************************************/
-    @media only screen and (max-width:320px){
-    .font-ja, .font-ja .welcome_message {
+    /* @media only screen and (max-width:320px){ */
+    @media screen and (min-width:320px) and (max-width:428px){
+      .font-ja .welcome_message {
         font-size: 1.7rem;
-        font-style: normal;
       }
     }
 
