--- a/layouts/partials/gototop.html
+++ b/layouts/partials/gototop.html
@@ -1,4 +1,4 @@
-<div id="goto-top" class="fa-stack" aria-hidden="true">
+<div id="goto-top" class="fa-stack" aria-hidden="true" title="{{i18n "Go_back_to_top"}}">
 <i class="fas fa-circle fa-stack-2x"></i>
 <i class="fas fa-arrow-circle-up fa-stack-1x"></i>
 </div>
