アイコンの表示崩れに対応

--- a/static/stylesheets/custom_gr.css
+++ b/static/stylesheets/custom_gr.css
@@ -67,8 +67,8 @@ img.svgicon16{
     background: #FFF;
 }
 
-.blue,
-.red,
+.blue img,
+.red img,
 img.icon,
 img.svgicon16{
     vertical-align: middle;
