タブレットで表示したときにwelcomeメッセージが背景画像に被らないようにする

--- a/static/stylesheets/custom_general.css
+++ b/static/stylesheets/custom_general.css
@@ -107,4 +107,13 @@
         padding-top: 0;
         font-size: 18px;
     }
+
+    .main {
+        top: 0px;
+    }
+
+    .hero {
+        height: 180px;
+  }
+
 }
