コードブロックに隣接するpタグのつまりを解消する

--- a/static/stylesheets/custom_general.css
+++ b/static/stylesheets/custom_general.css
@@ -95,6 +95,11 @@
   margin-left: 4em;
 }
 
+/* コードブロックで利用する設定 ********************************************/
+.codeblock-wrapper + p {
+  margin-top: 0.9em;
+}
+
 /* 768px以上の設定 *****************************************************/
 @media only screen and (min-width:768px){
     .logo-img {
