--- a/layouts/shortcodes/tile_gr3.html
+++ b/layouts/shortcodes/tile_gr3.html
@@ -14,7 +14,7 @@
     <a class="" href="{{ $link_href }}" target="_self">
         <div class="tile-head">
             <div class="tile-icon">
-                <i class="{{- .Get "fontawesome_icon"}}"></i>
+                <i class="{{- .Get "fontawesome_icon"}}" aria-hidden="true"></i>
             </div>
             <h3 class="tile-title">{{- $title -}}</h3>
         </div>
