--- a/static/stylesheets/custom_mw.css
+++ b/static/stylesheets/custom_mw.css
@@ -90,6 +90,33 @@ a,
 }
 /* -------------------------------------- End of Search opage */
 
+/* admonition -------------------- */
+
+.admonition.info .admonition-alt {
+    margin-bottom: 0px;
+}
+
+.admonition.info {
+    margin: 0 0 1em;
+    border-radius: 0;
+    border: none;
+    padding: 1em;
+    background: #F3F1E8;
+}
+
+.admonition.info .admonition-content {
+    padding: 1em 1em 0.5em;
+    background: #fff;
+}
+
+.admonition.info a {
+    text-decoration: none;
+}
+
+.admonition.info a:hover {
+    text-decoration: underline;
+}
+
 /* 404 page */
 .nftitle {
     background-image: none;
