--- a/layouts/shortcodes/info.html
+++ b/layouts/shortcodes/info.html
@@ -8,7 +8,7 @@
 {{- $div_text := findRE $tmptext .Inner }}
 {{- $text := strings.TrimPrefix $tmptext_pref (index $div_text 0) }}
 {{- $text = strings.TrimSuffix "</div>" $text }}
-<aside class="admonition info" style="{{- with (.Get "bg_color") }}background-color: {{ . }};{{ end -}}">
+<aside class="admonition info" style="{{- with (.Get "outer_color") }}background-color: {{ . }};{{ end -}}">
   <div class="admonition-alt">
     <i class="{{ .Get "fontawesome_icon" }}" aria-hidden="true"></i>
     <span>{{- $title -}}</span>
