--- a/layouts/shortcodes/info.html
+++ b/layouts/shortcodes/info.html
@@ -10,7 +10,7 @@
 {{- $text = strings.TrimSuffix "</div>" $text }}
 <aside class="admonition info" style="{{- with (.Get "outer_color") }}background-color: {{ . }};{{ end -}}">
   <div class="admonition-alt">
-    <i class="{{ .Get "fontawesome_icon" }}" aria-hidden="true"></i>
+    <i class="{{ .Get "fontawesome_icon" }}" style="{{- with (.Get "icon_color") }}color: {{ . }};{{ end -}}" aria-hidden="true"></i>
     <span>{{- $title -}}</span>
   </div>
   <div class="admonition-content" style="{{- with (.Get "inner_color") }}background-color:{{ . }}; {{ end -}}">{{- $text | markdownify -}}</div>
