互換設定を削除する

--- a/layouts/shortcodes/disabled.html
+++ b/layouts/shortcodes/disabled.html
@@ -1,5 +1,4 @@
-{{- $_hugo_config := `{ "version": 1 }` -}}
 {{- if in .Params $.Site.Params.TargetRegion}}
 {{else}}
-{{- .Inner}}
+{{- .Inner | .Page.RenderString }}
 {{- end}}
