--- a/layouts/shortcodes/enabled.html
+++ b/layouts/shortcodes/enabled.html
@@ -1,4 +1,3 @@
-{{- $_hugo_config := `{ "version": 1 }` -}}
 {{- if in .Params $.Site.Params.TargetRegion}}
-{{- .Inner}}
+{{- .Inner | .Page.RenderString }}
 {{- end}}
