--- a/layouts/partials/applyparams.html
+++ b/layouts/partials/applyparams.html
@@ -11,4 +11,15 @@
 {{- $t9 := replaceRE "{{%\\s*service_type\\s*%}}" $params.service_type $t8 }}
 {{- $t10 := replaceRE "{{%\\s*help\\s*%}}" $params.help $t9 }}
 {{- $t11 := replaceRE "{{%\\s*product_name\\s*%}}" $params.product_name $t10 }}
-{{- return $t11 }}
+{{- $t12 := replaceRE "{{<\\s*kintone\\s*>}}" $params.kintone $t11  }}
+{{- $t13 := replaceRE "{{<\\s*service\\s*>}}" $params.service $t12 }}
+{{- $t14 := replaceRE "{{<\\s*store\\s*>}}" $params.store $t13 }}
+{{- $t15 := replaceRE "{{<\\s*cybozu_com\\s*>}}" $params.cybozu_com $t14 }}
+{{- $t16 := replaceRE "{{<\\s*slash_help\\s*>}}" $params.slash_help $t15 }}
+{{- $t17 := replaceRE "{{<\\s*slash\\s*>}}" $params.slash $t16 }}
+{{- $t18 := replaceRE "{{<\\s*CorpName\\s*>}}" $params.CorpName $t17 }}
+{{- $t19 := replaceRE "{{<\\s*product\\s*>}}" $params.product $t18 }}
+{{- $t20 := replaceRE "{{<\\s*service_type\\s*>}}" $params.service_type $t19 }}
+{{- $t21 := replaceRE "{{<\\s*help\\s*>}}" $params.help $t20 }}
+{{- $t22 := replaceRE "{{<\\s*product_name\\s*>}}" $params.product_name $t21 }}
+{{- return $t22 }}
