--- a/static/stylesheets/application.css
+++ b/static/stylesheets/application.css
@@ -1230,6 +1230,45 @@ table .wd10 {
 }
 /* -------------------- end of Admonition */
 
+.announcement-banner {
+    top: 0;
+    position: sticky;
+    z-index: 999;
+    background-color: #ccc;
+    padding: 12px 16px;
+    line-height: 1.5em;
+}
+
+.announcement-banner-wrapper {
+    display: flex;
+    flex-direction: row;
+}
+.announcement-banner-icon {
+    flex-shrink: 0;
+}
+.announcement-banner-content {
+    display: block;
+    justify-content: space-between;
+    width: 100%;
+    margin: 0 12px;
+}
+.announcement-banner-content-text {
+    padding-right: 0;
+}
+.announcement-banner-content-text > ul {
+    list-style: disc;
+    margin-left: 24px;
+}
+.announcement-banner-content-button {
+    padding: 12px 0 4px;
+}
+.announcement-banner-content-button-close {
+    padding: 4px 8px;
+    white-space: nowrap;
+    background-color: #fff;
+    font-size: 0.9rem;
+    cursor: pointer;
+}
 
 /* graynote -------------------- */
 .graynote {
@@ -2200,6 +2239,16 @@ i.index-pdf {
     }
     .footer-links {
         margin-bottom: 0;
+    }
+    /* announcement banner */
+    .announcement-banner-content {
+        display: flex;
+    }
+    .announcement-banner-content-text {
+        padding-right: 12px;
+    }
+    .announcement-banner-content-button {
+        padding: 0;
     }
 }
 
