Apply annnoucement banner

--- a/layouts/404.html
+++ b/layouts/404.html
@@ -1,4 +1,5 @@
 {{- partial "head" . }}
+{{- partial "announcementbanner.html" . -}}
 {{- partial "header" . }}
     <div class="nftitle">
         <h1>
