--- a/layouts/_default/section.html
+++ b/layouts/_default/section.html
@@ -3,6 +3,7 @@
 {{- else}}
 {{- partial "head" . }}
 {{- partial "header" . }}
+{{- partial "announcementbanner.html" . -}}
 <div class="page-pad"></div>
 {{- if eq $.Site.Params.meganav true -}}
 <div class="mnav-pad"></div>
