--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -2,6 +2,7 @@
 <meta http-equiv="refresh" content="0; URL=/" />
 {{- else}}
 {{- partial "head" . }}
+{{- partial "announcementbanner.html" . -}}
 {{- partial "header" . }}
 <div class="page-pad"></div>
 {{- if eq $.Site.Params.meganav true }}
