--- a/layouts/gr/sitemap/section.html
+++ b/layouts/gr/sitemap/section.html
@@ -1,4 +1,5 @@
 {{- partial "head" . }}
+{{- partial "announcementbanner.html" . -}}
 {{- partial "header" . }}
 <div class="page-pad"></div>
 {{- if eq $.Site.Params.meganav true }}
