--- a/layouts/search_id/single.html
+++ b/layouts/search_id/single.html
@@ -1,5 +1,6 @@
 {{- partial "head" . }}
 <link rel="stylesheet" href="{{ "stylesheets/search_id.css" | relURL }}">
+{{- partial "announcementbanner.html" . -}}
 {{- partial "header" . }}
 <div class="page-pad"></div>
 {{- if eq $.Site.Params.meganav true -}}
