--- a/layouts/search_result/single.html
+++ b/layouts/search_result/single.html
@@ -1,4 +1,5 @@
 {{- partial "head" . }}
+{{- partial "announcementbanner.html" . -}}
 {{- partial "header" . }}
 <div class="page-pad page-pad-search"></div>
 {{- if eq $.Site.Params.meganav true -}}
