--- a/layouts/_default/_markup/render-heading.html
+++ b/layouts/_default/_markup/render-heading.html
@@ -17,14 +17,14 @@
         {{- $link := (printf "https://%s%s" .Page.Site.Params.domain .Page.RelPermalink) }}
         {{- template "anchorlink" (dict "level" .Level "link" $link "id" .Anchor "title" .Text ) }}
     {{- end }}
-{{- else if or (eq .Page.Site.Params.product "slash") (eq .Page.Site.Params.product "store") (eq .Page.Site.Params.product "store-jp") }}
-    {{- if eq .Level 6 }}
-<div class="h6-noanc">{{.Text | safeHTML}}</div>
-    {{- end }}
 {{- else }}
-    {{- if and (ne .Page.IsHome true) (ne .Page.Params.aliases nil) }}
-        {{- template "anchorlink2" (dict "ti" . "link" .Page.RelPermalink "al" (index .Page.Params.aliases 0) "ids" .Page.Site.Params.id_search) }}
+    {{- if and ( or (eq .Page.Site.Params.product "slash") (eq .Page.Site.Params.product "store") (eq .Page.Site.Params.product "store-jp") ) (eq .Level 6) }}
+<div class="h6-noanc">{{.Text | safeHTML}}</div>
     {{- else }}
+        {{- if and (ne .Page.IsHome true) (ne .Page.Params.aliases nil) }}
+            {{- template "anchorlink2" (dict "ti" . "link" .Page.RelPermalink "al" (index .Page.Params.aliases 0) "ids" .Page.Site.Params.id_search) }}
+        {{- else }}
 <h{{.Level}} id="{{.Anchor | safeURL}}" pid="{{.Anchor | safeURL}}" role="heading">{{.Text | safeHTML }}</h{{.Level}}>
+        {{- end }}
     {{- end }}
 {{- end }}
