--- a/layouts/print_page/single.html
+++ b/layouts/print_page/single.html
@@ -434,7 +434,7 @@
                         {{- else if eq $weight 500 -}}
                             {{- $targeturl = (printf "/cypn-docs/%s/groupmail" $lang) -}}
                         {{- else if eq $weight 1700 -}}
-                            {{- $targeturl = (printf "/cypn-docs/%s/JMeter" $lang) -}}
+                            {{- $targeturl = (printf "/cypn-docs/%s/jmeter" $lang) -}}
                         {{- else if eq $weight 1100 -}}
                             {{- $targeturl = (printf "/cypn-docs/%s/ldapauth" $lang) -}}
                         {{- else if eq $weight 900 -}}
